# home-price-prediction

./: .gitignore  .pre-commit-config.yaml  README.md  infer.py  pyproject.toml  train.py  utils.py
.dvc/: config
configs/: hosts.yaml  train.yaml
data/: metrics.txt.dvc  model.onnx.dvc  predictions.csv.dvc  scaler.onnx.dvc
home_price_prediction/: infer.py  train.py
home_price_prediction/outputs/2024-01-06/14-26-47/.hydra/: config.yaml  hydra.yaml
home_price_prediction/outputs/2024-01-06/14-27-00/.hydra/: hydra.yaml
home_price_prediction/outputs/2024-01-06/14-34-30/.hydra/: hydra.yaml
