[tool.poetry]
name = "home_price_prediction"
version = "0.1.0"
description = ""
authors = ["IAmLamarr <vitdub2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
dvc-gdrive = "^3.0.0"
matplotlib = "^3.8.2"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
skl2onnx = "^1.16.0"
onnxruntime = "^1.16.3"
pre-commit = "^3.6.0"
fire = "^0.5.0"
hydra-core = "^1.3.2"
mlflow = "^2.9.2"
dvc = "^3.38.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "hug"

[tool.flake8]
profile = "hug"
